SchemaNotFoundException: No such docType: default-browser-agent/1
Categories
(Toolkit :: Default Browser Agent, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox74 | --- | unaffected |
| firefox75 | + | wontfix |
| firefox76 | + | fixed |
| firefox77 | --- | fixed |
People
(Reporter: ascholtz, Assigned: molly)
References
Details
(Whiteboard: [dataquality])
Attachments
(3 files)
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
|
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
|
50 bytes,
text/x-github-pull-request
|
Details | Review |
The structured schema errors dashboard show that the default-browser-agent namespace contains pings that are not being ingested since the tables do not exist.
| Reporter | ||
Updated•5 years ago
|
| Reporter | ||
Comment 1•5 years ago
|
||
I did some investigation:
https://console.cloud.google.com/bigquery?sq=1018637472215:a4722e3dfb3b4be4ab0469fb91b479eb
The pings get sent by pingsender so it seems that a new ping got added but a schema for it doesn't exist yet.
| Reporter | ||
Comment 2•5 years ago
|
||
This got added recently as part of https://bugzilla.mozilla.org/show_bug.cgi?id=1602463
In the code: https://searchfox.org/mozilla-central/source/toolkit/mozapps/defaultagent/Telemetry.cpp#28
Comment 3•5 years ago
|
||
Is this covered by the schema added in this PR?
https://github.com/mozilla-services/mozilla-pipeline-schemas/pull/495/files
Updated•5 years ago
|
| Reporter | ||
Comment 4•5 years ago
|
||
Indeed. The problem here is that submission URIs are incorrect. Currently, their format is /submit/default-browser-agent/1/default-browser/<ID> while the decoder expects /submit/default-browser-agent/default-browser/1/<ID> .
| Reporter | ||
Comment 5•5 years ago
|
||
In https://searchfox.org/mozilla-central/source/toolkit/mozapps/defaultagent/Telemetry.cpp#33 the line needs to be changed to:
#define TELEMETRY_PING_URL
TELEMETRY_BASE_URL "/" TELEMETRY_NAMESPACE "/" TELEMETRY_PING_DOCTYPE
"/" TELEMETRY_PING_VERSION "/"
| Assignee | ||
Comment 6•5 years ago
|
||
.... oh good grief. I swear I've done this before. Okay. Thank you very much for hunting that down; since it's my fault, I will take it from here.
| Assignee | ||
Comment 7•5 years ago
•
|
||
Bug 1602463 was uplifted to 75, so everything down to that is affected.
| Assignee | ||
Comment 8•5 years ago
|
||
| Assignee | ||
Comment 10•5 years ago
|
||
Comment 11•5 years ago
|
||
Comment 12•5 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/e911977b9bfc
https://hg.mozilla.org/mozilla-central/rev/9d1cf3c852ae
Updated•5 years ago
|
| Assignee | ||
Comment 14•5 years ago
|
||
It should be, I'll request it now. I was kind of waiting for confirmation that we wanted to do that (normally probably wouldn't but this thing's been such a debacle).
| Assignee | ||
Comment 15•5 years ago
|
||
Comment on attachment 9138561 [details]
Bug 1626020 - Fix default browser agent telemetry URL. r=bytesized
Beta/Release Uplift Approval Request
- User impact if declined: Default browser agent telemetry appears to send successfully, but then can't be received into the pipeline, so we get no data
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): This is a minor change to fix the order of components in the default browser ping submission URL and fix the name of one field in the ping; there are no changes to the data itself, only to how it's submitted.
- String changes made/needed:
| Assignee | ||
Updated•5 years ago
|
Comment 16•5 years ago
|
||
Comment on attachment 9138561 [details]
Bug 1626020 - Fix default browser agent telemetry URL. r=bytesized
Fixes the default browser agent telemetry pings so they can be properly processed. Approved for 76.0b3.
Updated•5 years ago
|
Comment 17•5 years ago
|
||
| bugherder uplift | ||
Updated•5 years ago
|
Comment 18•5 years ago
|
||
Comment 19•3 years ago
|
||
Since this has been fixed for a couple years now, I have switched the exception class to UnwantedDataException. That will prevent these errors from showing up in our monitoring. See: https://github.com/mozilla/gcp-ingestion/pull/1998
Updated•3 years ago
|
| Reporter | ||
Updated•2 years ago
|
Description
•