Bug 1626020 - Fix default browser agent telemetry URL. r=bytesized a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D69834